--- a/css/style.css
+++ b/css/style.css
@@ -250,6 +250,7 @@ button.scroll_down:before{
 	text-align: center;
 	max-width: 1000px;
 	justify-content: space-around;
+	flex-wrap: wrap;
 }
 .about img{
     height: 10rem;
